# SocialBoostAI

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  DEFINITIONS.md  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  STATUS.md  TASKS.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  e2e.yml
config/: config.yaml.example
docs/: DEPLOY_CHECKLIST.md  MARKETING_TEMPLATES.md  api_integration.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: accessibility.spec.ts  auth.setup.ts  auth.spec.ts  billing.spec.ts  dashboard.spec.ts  landing.spec.ts  responsive.spec.ts
frontend/public/: browserconfig.xml  manifest.json  offline.html  robots.txt  sitemap.xml  sw.js
frontend/src/: App.tsx  index.css
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_tables.py  002_add_subscriptions.py  003_add_cross_platform_comparisons.py  004_add_performance_indexes.py  005_add_scheduled_posts.py  006_add_user_onboarding.py  007_add_push_subscriptions.py  (+1 more)
src/: __init__.py  ai_advanced.py  ai_content_generator.py  ai_suggest.py  analysis.py  content_analysis.py  cross_platform.py  fetch_data.py  instagram_analysis.py  instagram_client.py  linkedin_analysis.py  linkedin_client.py  main.py  models.py  report.py  summary.py  tiktok_analysis.py  tiktok_client.py  youtube_analysis.py  youtube_client.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_ai_advanced.py  test_analysis.py  test_api_analysis.py  test_api_auth.py  test_api_billing.py  test_api_health.py  test_api_reports.py  test_api_users.py  test_background_tasks.py  test_backup_api.py  test_billing_service.py  test_cache_service.py  test_content_analysis.py  test_content_generation.py  test_content_generation_api.py  test_cross_platform.py  test_cross_platform_api.py  test_csrf.py  test_email_api.py  test_email_service.py  test_health.py  test_instagram.py  test_instagram_analysis.py  test_instagram_api.py  test_linkedin_analysis.py  test_linkedin_api.py  test_logging_config.py  test_models.py  test_onboarding_api.py  test_push_api.py  test_push_service.py  test_rate_limit.py  test_report_summary.py  test_schedule_api.py  test_schedule_service.py  test_summary.py  test_tiktok_analysis.py  (+6 more)
(+121 files in other folders)
